# foundational-agents

./: .gitignore  LICENSE  README.md  pyproject.toml
src/foundational_agents/: __init__.py  cli.py
src/foundational_agents/core/: __init__.py  coordinator.py  state.py  workers.py
src/foundational_agents/mcp/: __init__.py  server.py
src/foundational_agents/templates/: __init__.py
src/foundational_agents/templates/claude/: code-documenter.SKILL.md  marketing-analyst.SKILL.md  presentation-maker.SKILL.md
src/foundational_agents/templates/copilot/: code-documenter.agent.md  marketing-analyst.agent.md  presentation-maker.agent.md  project-manager.agent.md  system-design-engineer.agent.md
src/my_foundational_agents/: __init__.py  cli.py
src/my_foundational_agents/core/: __init__.py  coordinator.py  workers.py
src/my_foundational_agents/mcp/: server.py
src/my_foundational_agents/templates/claude/: project-manager.SKILL.md  system-design-engineer.SKILL.md
