[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foundational-agents"
version = "0.1.0"
description = "Async orchestration hub for specialized AI agent personas, powered by Google Antigravity SDK and served via FastMCP."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Foundational Agents Team" },
]
keywords = ["agents", "mcp", "antigravity", "orchestration", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "google-antigravity",
    "mcp>=1.2.0",
    "click>=8.0",
]

[project.scripts]
fd-agents = "foundational_agents.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/foundational_agents"]

[tool.hatch.build.targets.wheel.force-include]
"src/foundational_agents/templates" = "foundational_agents/templates"
